test/fail/basic_syntax/invalid_parameter.type.lly
#[
SyntaxError: 'asdf' is not a package or a class.
Where: File "invalid_parameter.type.lly" at line 6
]#

define f(g: asdf) {
}
